[package]
name = "sdltest"
version = "0.1.0"
authors = ["Horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.34.3", features = [ "image", "unsafe_textures" ]}
nalgebra = "0.22.1"
